Added branch dfs and function graphSearch and works well